--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "mongoose": "^5.7.6",
     "morgan": "^1.9.1",
+    "uuid-apikey": "^1.4.6",
     "winston": "^3.2.1"
   }
 }
